tests/test48.rael.exp
Error [tests/test48.rael:1:1]: '^' is outside of a routine and a match statement
| ^ 1
| ^
